<resources>
    <string name="app_name">DetectionApp</string>
    <string name="skip">Skip</string>
    <string name="str_continue">Continue</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">If you don\'t have an account? <font  color="#AA95FF">Sign up</font> </string>
    <string name="register">Register</string>
    <string name="policy">By clicking register for an account, you agree to our <font color="#AA95FF">policy</font> and <font color="#AA95FF">terms</font></string>
    <string name="go_back_login">Back to login</string>
    <string name="email_identification">Email Authentication</string>
    <string name="otp_send_to_address">Verification code has been sent to your email address:</string>
    <string name="confirm">Confirm</string>
    <string name="init_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_email_please">Email field cannot be empty</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="enter_password_please">Password can not be empty</string>
    <string name="error_re_password_not_match">Password does not match</string>
    <string name="error_common">Try again</string>
</resources>