<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="24dp">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/MyAppTextViewStyle.H3.Bold"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_width="wrap_content"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/LoginTextInputLayoutStyle"
        android:id="@+id/tipEmail"
        android:layout_height="64dp"
        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        app:startIconDrawable="@drawable/ic_user">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/email"
            android:id="@+id/edtEmail"
            android:inputType="textEmailAddress"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/MyAppTextViewStyle.Body"
        android:gravity="end"
        android:id="@+id/tvErrorEmail"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:textColor="@color/text_error"
        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/LoginTextInputLayoutStyle"
        android:id="@+id/tipPassword"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/seletor_show_hide_password"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/password"
            android:id="@+id/edtPassword"
            android:inputType="textPassword"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/MyAppTextViewStyle.Body"
        android:gravity="end"
        android:id="@+id/tvErrorPassword"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:textColor="@color/text_error"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnForgotPassword"
        android:layout_gravity="end"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary" />

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/bg_button"
        android:id="@+id/btnLogin"
        android:layout_height="60dp"
        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        android:text="@string/login"
        android:textColor="@color/text_white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:clickable="true"
        android:id="@+id/btnRegister"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:text="@string/dont_have_account"
        android:textColor="@color/text_sub" />
</androidx.appcompat.widget.LinearLayoutCompat>