<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipChildren="false"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="24dp">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnBack"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        android:layout_width="32dp"
        android:src="@drawable/ic_back_chervon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/MyAppTextViewStyle.H3.Bold"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/LoginTextInputLayoutStyle"
        android:id="@+id/tipEmail"
        android:layout_height="64dp"
        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        android:textColorHint="#ADA4A5"
        app:startIconDrawable="@drawable/ic_user">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/email"
            android:id="@+id/edtEmail"
            android:inputType="textEmailAddress"
            android:layout_height="match_parent"
            android:layout_width="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/MyAppTextViewStyle.Body"
        android:gravity="end"
        android:id="@+id/tvErrorEmail"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:textColor="@color/text_error"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/bg_button"
        android:id="@+id/btnContinue"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        android:layout_width="match_parent"
        android:text="@string/str_continue"
        android:textColor="@color/text_white" />
</LinearLayout>